# src/main/resources/static/openapi.yaml
@@ -170,6 +170,11 @@ paths:
         - Photos
       summary: retrieve a photo from s3
       parameters:
+        - name: objectKey
+          in: path
+          required: true
+          schema:
+            type: string
         - name: presignedUrl
           in: query
           required: true
@@ -184,7 +189,16 @@ paths:
               schema:
                 type: string
                 format: binary
-
+            image/png:
+              schema:
+                type: string
+                format: binary
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
     put:
       operationId: uploadToS3
       tags:
@@ -817,3 +831,16 @@ components:
       required:
         - s3ObjectKey
         - presignedUrl
+
+    BadRequest:
+      type: object
+      properties:
+        timestamp:
+          type: string
+          format: datetime
+        status:
+          type: string
+        error:
+          type: string
+        path:
+          type: string
